# poly

./: CMakeLists.txt  README.md  makefile
include/poly_handle/: poly.hpp
src/: poly.cpp
